@@ -1,6 +1,7 @@
 v3.5.0 (2021.03.xx)
   - Update cURL library to version 7.75.0
   - Fix bug that could cause unnecessary triggering of both channel and channel group updates
+  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
   - Add new "Radio Channels" settings category and associated options to enable radio channel mapping
   - Adjust reported Electronic Program Guide (EPG) original air values based on the system time zone
 
